Fixed adding, updating tasks, resolving through drizzle, fixed some styling and spacing

--- a/apps/next/src/styles/globals.css
+++ b/apps/next/src/styles/globals.css
@@ -3,7 +3,7 @@
 html {
   padding: 0;
   margin: 0;
-  overflow: hidden;
+  height: 100%;
 }
 
 @theme {
@@ -24,13 +24,14 @@ html {
 }
 
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
-  overflow: hidden;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 @keyframes swipe {
   0% {
     transform: translateX(-100%);
